removed css linking

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration</title>
-    <!-- this is the site for the css link -->
-
 </head>
 <body>
     <div class="form-group">
@@ -20,7 +18,7 @@
                 <input type="text" name="username" id="username" placeholder="enter username">
             </div>
             <div>
-                <label for="email">Email</label>
+                <label for="email">Email Field</label>
                 <input type="email" name="email" id="email" placeholder="enter a valid email">
             </div>
             <div>
