--- a/index.html
+++ b/index.html
@@ -5,29 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="form-group">
-        <form action="">
+        <form action="" id="form">
             <div>
-                <label for="firstname">Firstname:</label>
+                <label for="firstname">Firstname</label>
                 <input type="text" name="firstname" id="firstname" placeholder="enter firstname">
-            </div>
+            </div><br>
             <div>
                 <label for="username">Username</label>
                 <input type="text" name="username" id="username" placeholder="enter username">
-            </div>
+            </div><br>
             <div>
                 <label for="email">Email Field</label>
                 <input type="email" name="email" id="email" placeholder="enter a valid email">
-            </div>
+            </div><br>
             <div>
                 <label for="password">Password</label>
                 <input type="password" name="password" placeholder="enter a valid password">
-            </div>
+            </div><br>
 
             <div>
-                <button class="btn btn-button" value="submit">Register</button>
+                <button class="btn btn-button" id="btn" value="submit">Register</button>
             </div>
         </form>
     </div>
