added a container div

--- a/index.html
+++ b/index.html
@@ -8,29 +8,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="form-group">
-        <form action="" id="form">
-            <div>
-                <label for="firstname">Firstname</label>
-                <input type="text" name="firstname" id="firstname" placeholder="enter firstname">
-            </div><br>
-            <div>
-                <label for="username">Username</label>
-                <input type="text" name="username" id="username" placeholder="enter username">
-            </div><br>
-            <div>
-                <label for="email">Email Field</label>
-                <input type="email" name="email" id="email" placeholder="enter a valid email">
-            </div><br>
-            <div>
-                <label for="password">Password</label>
-                <input type="password" name="password" placeholder="enter a valid password">
-            </div><br>
-
-            <div>
-                <button class="btn btn-button" id="btn" value="submit">Register</button>
-            </div>
-        </form>
+    <div class="container">
+        <div class="form-group">
+            <form action="" id="form">
+                <div>
+                    <label for="firstname">Firstname</label>
+                    <input type="text" name="firstname" id="firstname" placeholder="enter firstname">
+                </div><br>
+                <div>
+                    <label for="username">Username</label>
+                    <input type="text" name="username" id="username" placeholder="enter username">
+                </div><br>
+                <div>
+                    <label for="email">Email Field</label>
+                    <input type="email" name="email" id="email" placeholder="enter a valid email">
+                </div><br>
+                <div>
+                    <label for="password">Password</label>
+                    <input type="password" name="password" placeholder="enter a valid password">
+                </div><br>
+    
+                <div>
+                    <button class="btn btn-button" id="btn" value="submit">Register</button>
+                </div>
+            </form>
+        </div>
     </div>
 </body>
 </html>
